Encounters: Rename neutral FT/Dialogue (from "standard")
Standard doesn't really imply "nothing in particular happening" quite the same way neutral does. Also the Wiki uses neutral instead of standard

--- a/encounters/ambyulance.html
+++ b/encounters/ambyulance.html
@@ -54,15 +54,15 @@ toc:
             id: encounter-poppup
             name: With Poppup
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
   -
     id: dialogue
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-spareable
         name: Spareable
@@ -143,7 +143,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ambyu-Lance is sucking up coffee out of a tall glass.</d-text>
 	</d-box>
@@ -164,7 +164,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Ambyu-Lance</d-speaker>
 		<d-text>You'll need TWO<span class="break"></span> apples to stop ME!</d-text>
