--- a/encounters/badguys.html
+++ b/encounters/badguys.html
@@ -49,15 +49,15 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
   -
     id: dialogue
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
         subheadings:
           -
             id: dialogue-standard-susie
@@ -119,7 +119,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie and Lancer are making fun of you.</d-text>
 	</d-box>
@@ -140,7 +140,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<h4 id="dialogue-standard-susie">Susie</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Susie</d-speaker>
