--- a/encounters/berdlycybercity.html
+++ b/encounters/berdlycybercity.html
@@ -37,8 +37,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
   -
     id: dialogue
     name: General dialogue
@@ -79,7 +79,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Berdly thanks Noelle profusely.</d-text>
 	</d-box>
