--- a/encounters/berdlycybercityweird.html
+++ b/encounters/berdlycybercityweird.html
@@ -49,8 +49,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
   -
     id: dialogue
     name: General dialogue
@@ -94,7 +94,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<p class="note">No flavor text is provided. The screen remains blank.</p>
 </section>
 
