--- a/encounters/bloxer.html
+++ b/encounters/bloxer.html
@@ -36,8 +36,8 @@ toc:
             id: encounter-bloxer
             name: With another Bloxer
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -49,8 +49,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -97,7 +97,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Bloxer is thinking about training.</d-text>
 	</d-box>
@@ -132,7 +132,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Bloxer</d-speaker>
 		<d-text>HOOH...! You<span class="break"></span> interrupted my<span class="break"></span> training...!</d-text>
