--- a/encounters/cloverdojo.html
+++ b/encounters/cloverdojo.html
@@ -49,8 +49,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -68,8 +68,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-fallback
         name: Fallback text
@@ -123,7 +123,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Clover flashes a trio of terrible smiles.</d-text>
 	</d-box>
@@ -178,7 +178,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<div class="boxgroup">
 		<d-box theme="battletalk">
 			<d-text asterisk="nice">Nice to<span class="break"></span> see you<span class="break"></span> again!</d-text>
