--- a/encounters/guei.html
+++ b/encounters/guei.html
@@ -39,8 +39,8 @@ toc:
             id: encounter-balthizardmizzle
             name: With Balthizard and Mizzle
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -60,8 +60,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -121,7 +121,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Guei turns its head like a bird.</d-text>
 	</d-box>
@@ -184,7 +184,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<p class="note">Guei cycles through the follow dialogues in order, unless <a href="#exercism">Exercism</a> / <a href="#xercism">{% include acticon chara="Ralsei" -%} Xercism</a> is used, in which case it automatically skips to the last, then resumes the cycle from the start:</p>
 	<img src="{{ '/assets/images/story/talkguei/0.png' | relative_url }}" alt="鬼" height="64" />
 	<hr class="hr2">
