--- a/encounters/hammerofjustice.html
+++ b/encounters/hammerofjustice.html
@@ -40,8 +40,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-fightprompt
         name: Turn 4, if you haven't attacked yet
@@ -95,7 +95,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<p>Listed in priority order; that is, any given line of flavor text will override the lines immediately below it within this subsection.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>The air crackles green with freedom.</d-text>
