--- a/encounters/hathy.html
+++ b/encounters/hathy.html
@@ -53,8 +53,8 @@ toc:
             id: encounter-rudinns
             name: With two other Rudinns
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -72,8 +72,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -134,7 +134,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Hathy's body beats audibly.</d-text>
 	</d-box>
@@ -211,7 +211,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Hathy</d-speaker>
 		<d-text><img src="{{ '/assets/images/story/talkhathy/0.gif' | relative_url }}" alt="A heart with a biting mouth"></d-text>
