--- a/encounters/jackenstein.html
+++ b/encounters/jackenstein.html
@@ -33,8 +33,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tensionup
         name: At 60% TP or above
@@ -82,7 +82,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You are in the DARK ZONE.</d-text>
 	</d-box>
