--- a/encounters/jevil.html
+++ b/encounters/jevil.html
@@ -29,8 +29,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-chaosbomb
         name: Phase 4, immediately before Chaos Bomb
@@ -48,8 +48,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-attack
         name: With specific attacks
@@ -80,7 +80,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>The world is spinning, spinning.</d-text>
 	</d-box>
@@ -133,7 +133,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<p>Plays when no attack-specific dialogue (<a href="#dialogue-attack">see below</a>) takes precedence.</p>
 	<d-box theme="battletalk">
 		<d-speaker>Jevil</d-speaker>
