--- a/encounters/kroundcardcastle.html
+++ b/encounters/kroundcardcastle.html
@@ -56,8 +56,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -184,7 +184,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>K.Round shuffles furiously.</d-text>
 	</d-box>
