--- a/encounters/lancervslightners.html
+++ b/encounters/lancervslightners.html
@@ -36,15 +36,15 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
   -
     id: dialogue
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -73,7 +73,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Lancer's riding it out.</d-text>
 	</d-box>
@@ -100,7 +100,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<h4>First turn</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Lancer</d-speaker>
