--- a/encounters/maus.html
+++ b/encounters/maus.html
@@ -54,8 +54,8 @@ toc:
             id: encounter-swatchlings
             name: With 2 Swatchlings
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired / Low HP
@@ -67,8 +67,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-trapped
         name: '"Trapped"'
@@ -150,7 +150,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Maus is thinking about overly elaborate machines.</d-text>
 	</d-box>
@@ -195,7 +195,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Maus</d-speaker>
 		<d-text>(You think you're<span class="break"></span> the big cheese?)</d-text>
