--- a/encounters/missmizzle.html
+++ b/encounters/missmizzle.html
@@ -36,8 +36,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
         subheadings:
           -
             id: ft-standard-holywatercooler
@@ -50,8 +50,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
         subheadings:
           -
             id: dialogue-standard-holywatercooler
@@ -141,7 +141,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<h4 id="ft-standard-holywatercooler">As HolywaterCooler</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You feel a strong presence from the watercooler.</d-text>
@@ -190,7 +190,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<h4 id="dialogue-standard-holywatercooler">As HolywaterCooler</h4>
 	<p class="note">Forced on the first turn of the encounter (unless overridden by <a href="#dialogue-fight">dialogue for being attacked</a>), and joins the randomly-chosen pool on subsequent turns with a double chance of occurring:</p>
 	<d-box theme="battletalk">
