--- a/encounters/organikk.html
+++ b/encounters/organikk.html
@@ -42,8 +42,8 @@ toc:
             id: encounter-winglade
             name: With Winglade
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -58,8 +58,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-spareable
         name: Spareable
@@ -134,7 +134,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Organikk toots philosophically.</d-text>
 	</d-box>
@@ -181,7 +181,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Organikk</d-speaker>
 		<d-text>I am the<span class="break"></span> philosopher.<span class="break"></span> Amen.</d-text>
