--- a/encounters/ribbick.html
+++ b/encounters/ribbick.html
@@ -36,8 +36,8 @@ toc:
             id: encounter-ribbick
             name: With 1 or 2 other Ribbicks
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-lowhp
         name: Low HP
@@ -49,8 +49,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-isblown
         name: After being dirtied
@@ -104,7 +104,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ribbick wants to be friends with a dancing trash can.</d-text>
 	</d-box>
@@ -139,7 +139,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<p>If Ribbick has been recruited, then in the encounter with 1 other Ribbick, one of the Ribbicks is actually a disguised <a href="{{ '/encounters/rabbick' | relative_url }}">Rabbick</a>, indicated by the disguised enemy using the <a href="{{ '/encounters/rabbick#dialogue-standard' | relative_url }}">standard Rabbick dialogue</a> instead of the Ribbick dialogue below.</p>
 	<d-box theme="battletalk">
 		<d-speaker>Ribbick</d-speaker>
