--- a/encounters/shadowguy.html
+++ b/encounters/shadowguy.html
@@ -42,8 +42,8 @@ toc:
             id: encounter-pippins
             name: With 2 Pippins
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -146,7 +146,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<h4>During Legend of Tenna boards with Tenna present</h4>
 	<p class="note">Uses the <a href="{{ '/encounters/legendoftenna#betweenturns' | relative_url }}">Legend of Tenna-specific flavor text</a>.</p>
 
