--- a/encounters/tasque.html
+++ b/encounters/tasque.html
@@ -48,8 +48,8 @@ toc:
             id: encounter-poppup
             name: With Poppup
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired / Low HP
@@ -61,8 +61,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -141,7 +141,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Tasque is batting a ball of low-poly yarn.</d-text>
 	</d-box>
@@ -179,7 +179,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Tasque</d-speaker>
 		<d-text>meowowme<span class="break"></span>owowmeow</d-text>
