--- a/encounters/tasquemanager.html
+++ b/encounters/tasquemanager.html
@@ -38,8 +38,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired / Low HP
@@ -51,8 +51,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-quiz
         name: With letter quiz attack
@@ -100,7 +100,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Tasque Manager makes a list of her outfits for the next year. She only has one outfit.</d-text>
 	</d-box>
@@ -139,7 +139,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Tasque Manager</d-speaker>
 		<d-text>Processes! Services!<span class="break"></span> Performance! Details!</d-text>
