--- a/encounters/titanspawn.html
+++ b/encounters/titanspawn.html
@@ -37,8 +37,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tensionup
         name: At 64% TP or higher
@@ -88,7 +88,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You hear your heart beating in your ears.</d-text>
 	</d-box>
