--- a/encounters/virovirokun.html
+++ b/encounters/virovirokun.html
@@ -56,8 +56,8 @@ toc:
             id: dialogue-ambyulance
             name: Encountered with Ambyu-Lance
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired / Low HP
@@ -69,8 +69,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-ambyulance
         name: Encountered with Ambyu-Lance
@@ -181,7 +181,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Virovirokun is poking round things with a spear.</d-text>
 	</d-box>
@@ -221,7 +221,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Virovirokun</d-speaker>
 		<d-text>I'm the fever,<span class="break"></span> I'm the chill.</d-text>
