--- a/encounters/watercooler.html
+++ b/encounters/watercooler.html
@@ -34,8 +34,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -50,8 +50,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -89,7 +89,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>The watercooler shows no mercy.</d-text>
 	</d-box>
@@ -136,7 +136,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<p class="note">Forced on the first turn of the encounter, and joins the randomly-chosen pool on subsequent turns with a double chance of occurring:</p>
 	<d-box theme="battletalk">
 		<d-speaker>Watercooler</d-speaker>
