--- a/encounters/wicabel.html
+++ b/encounters/wicabel.html
@@ -39,8 +39,8 @@ toc:
             id: organikks
             name: With 2 Organikks
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -55,8 +55,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-spareable
         name: Spareable
@@ -122,7 +122,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Wicabel rings a haunting hex.</d-text>
 	</d-box>
@@ -171,7 +171,7 @@ Unused encounters with blank text:
 	<h2>General dialogue</h2>
 	<p class="note">Wicabel's dialogue is accompanied by musical chiming, as from a music box.</p>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Wicabel</d-speaker>
 		<d-text>Bubell,<span class="break"></span> bubell,<span class="break"></span> toil and<span class="break"></span> trubell.</d-text>
