--- a/encounters/winglade.html
+++ b/encounters/winglade.html
@@ -39,8 +39,8 @@ toc:
             id: encounter-organikk
             name: With Organikk
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -55,8 +55,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-spareable
         name: Spareable
@@ -118,7 +118,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Winglade molts and revolts.</d-text>
 	</d-box>
@@ -166,7 +166,7 @@ Unused encounters with blank text:
 	<h2>General dialogue</h2>
 	<p>Winglade's dialogue, unlike other enemies's, appears in a circle around their bodies.</p>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	{% include winglade_talk text="Halo, goodeye!&nbsp; &nbsp; &nbsp; &nbsp; Halo, goodeye!" %}
 	<hr class="hr2">
 	{% include winglade_talk text="Halo, are you listening?" %}
