--- a/encounters/zapper.html
+++ b/encounters/zapper.html
@@ -46,8 +46,8 @@ toc:
             id: encounter-tenna
             name: With Tenna
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -62,8 +62,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-sharpshoot
         act_icon: [Susie, Ralsei]
@@ -152,8 +152,8 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
-	<h4>Normal</h4>
+	<h3 id="ft-neutral">Neutral</h3>
+	<h4>Standard</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Zapper clicks and clacks, zip and zaps.</d-text>
 	</d-box>
@@ -216,7 +216,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Zapper</d-speaker>
 		<d-text>Hoofah<span class="break"></span> doofah.</d-text>
