--- a/encounters/0-template.html
+++ b/encounters/0-template.html
@@ -36,8 +36,8 @@ toc:
             id: encounter-otherenemyname
             name: With Other_enemy_name
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -52,8 +52,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-specialcondition
         name: Special_condition
@@ -112,7 +112,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>TODO</d-text>
 	</d-box>
@@ -142,7 +142,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Name_goes_here</d-speaker>
 		<d-text>TODO</d-text>
