--- a/encounters/balthizard.html
+++ b/encounters/balthizard.html
@@ -42,8 +42,8 @@ toc:
             id: encounter-mizzleguei
             name: With Mizzle and Guei
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-lightup
         name: When lit up
@@ -61,8 +61,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-lightup
         name: When lit up
@@ -151,7 +151,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Balthizard clambers slowly.</d-text>
 	</d-box>
@@ -204,7 +204,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Balthizard</d-speaker>
 		<d-text>Slow down.</d-text>
