--- a/encounters/berdlycyberfield.html
+++ b/encounters/berdlycyberfield.html
@@ -37,8 +37,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-lowhp
         name: Low HP
@@ -98,7 +98,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Berdly calls Queen for help!</d-text>
 		<d-text asterisk>But Queen is pretending to be on the phone!</d-text>
