--- a/encounters/bibliox.html
+++ b/encounters/bibliox.html
@@ -44,8 +44,8 @@ toc:
             id: encounter-winglade
             name: With Winglade
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -60,8 +60,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -111,7 +111,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Bibliox rearranges bookmarks in his beard.</d-text>
 	</d-box>
@@ -163,7 +163,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Bibliox</d-speaker>
 		<d-text>Mumble,<span class="break"></span> mumble...</d-text>
