--- a/encounters/cround.html
+++ b/encounters/cround.html
@@ -37,8 +37,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         name: ACTs
         subheadings:
@@ -68,7 +68,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<p>Unused, as the battle is scripted to end after the first turn, with Susie's attack knocking C. Round out of the encounter without commentary even if the ACTs {% include acticon chara="Susie" -%} X-Compliment and {% include acticon chara="Ralsei" -%} Warning aren't used.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>C.Round continues to act extremely violent.</d-text>
