--- a/encounters/headhathy.html
+++ b/encounters/headhathy.html
@@ -36,8 +36,8 @@ toc:
             id: encounter-headhathy3
             name: With 2 other Head Hathys
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -52,8 +52,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -104,7 +104,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Head Hathy's body moves silently.</d-text>
 	</d-box>
@@ -147,7 +147,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Head Hathy</d-speaker>
 		<d-text><img src="{{ '/assets/images/story/talkhathy/4.gif' | relative_url }}" alt="A heart with a biting mouth"></d-text>
