--- a/encounters/jigsawry.html
+++ b/encounters/jigsawry.html
@@ -39,8 +39,8 @@ toc:
             id: encounter-rudinnhathy
             name: With Rudinn and Hathy
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -55,8 +55,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-spareable
         name: Spareable
@@ -117,7 +117,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Jigsawry is pretending to march.</d-text>
 	</d-box>
@@ -160,7 +160,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>H... hurting<span class="break"></span> people is<span class="break"></span> cool..</d-text>
