--- a/encounters/king.html
+++ b/encounters/king.html
@@ -30,8 +30,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-lowhp
         name: Low HP
@@ -77,7 +77,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Darkness pours from the fountain.</d-text>
 	</d-box>
