--- a/encounters/kroundgreatboard.html
+++ b/encounters/kroundgreatboard.html
@@ -44,8 +44,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -202,7 +202,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>K.Round shuffles furiously.</d-text>
 	</d-box>
