--- a/encounters/mauswheel.html
+++ b/encounters/mauswheel.html
@@ -37,8 +37,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -50,8 +50,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-spareable
         name: Spareable
@@ -101,7 +101,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Mauswheel is rolling around with an annoying wheel sound.</d-text>
 	</d-box>
@@ -137,7 +137,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Mauswheel</d-speaker>
 		<d-text>(I'm no cheater!<span class="break"></span> It's just cheese...)</d-text>
