--- a/encounters/mizzle.html
+++ b/encounters/mizzle.html
@@ -36,8 +36,8 @@ toc:
             id: encounter-balthizardguei
             name: With Balthizard and Guei
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -52,8 +52,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-awake
         name: When awake
@@ -171,7 +171,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<p>When <span class="blue">Tired</span>.</p>
 	<img src="{{ '/assets/images/story/talkmizzle/z.png' | relative_url }}" width="64" alt="Z" />
 
