--- a/encounters/pippins.html
+++ b/encounters/pippins.html
@@ -39,8 +39,8 @@ toc:
             id: encounter-shadowguypippins
             name: With Shadowguy and another Pippins
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-lowhp
         name: Low HP
@@ -52,8 +52,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-sharpshoot
         act_icon: [Susie, Ralsei]
@@ -119,7 +119,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<h4>During Legend of Tenna boards with Tenna present</h4>
 	<p class="note">Uses the <a href="{{ '/encounters/legendoftenna#betweenturns' | relative_url }}">Legend of Tenna-specific flavor text</a>.</p>
 
@@ -202,7 +202,7 @@ Unused encounters with blank text:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Pippins</d-speaker>
 		<d-text>Will I win?<span class="break"></span> Or will I win... BIG?</d-text>
