--- a/encounters/poppup.html
+++ b/encounters/poppup.html
@@ -53,8 +53,8 @@ toc:
             id: encounter-virovirokun
             name: With Virovirokun
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -66,8 +66,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-tired
         name: Immediately after becoming Tired
@@ -149,7 +149,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Poppup is begging you to click on a broken link with puppy dog eyes.</d-text>
 	</d-box>
@@ -199,7 +199,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Poppup</d-speaker>
 		<d-text>.....ASOBOH<span class="break"></span>......?</d-text>
