--- a/encounters/rabbick.html
+++ b/encounters/rabbick.html
@@ -39,8 +39,8 @@ toc:
             id: encounter-rudinn
             name: With Rudinn
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-lowhp
         name: Low HP
@@ -52,8 +52,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-isblown
         name: After being cleaned
@@ -105,7 +105,7 @@ encounters 16/17/24/32; 24 is unused
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rabbick is looking for a couch to get stuck under.</d-text>
 	</d-box>
@@ -141,7 +141,7 @@ encounters 16/17/24/32; 24 is unused
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<hr class="hr2">
 	<h4>Chapter 1</h4>
 	<d-box theme="battletalk">
