--- a/encounters/rouxlsch2.html
+++ b/encounters/rouxlsch2.html
@@ -82,7 +82,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You need more Residential Zones.</d-text>
 	</d-box>
