--- a/encounters/rudinnranger.html
+++ b/encounters/rudinnranger.html
@@ -29,8 +29,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -45,8 +45,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
   -
     name: ACTs
     subheadings:
@@ -78,7 +78,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rudinn Ranger gleams gallantly.</d-text>
 	</d-box>
@@ -121,7 +121,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>Long live<span class="break"></span> the king!</d-text>
