--- a/encounters/spamton.html
+++ b/encounters/spamton.html
@@ -47,8 +47,8 @@ toc:
             id: encounter-otherenemyname
             name: With Other_enemy_name
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -63,8 +63,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-specialcondition
         name: Special_condition
@@ -122,7 +122,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Great ENEMY! SUSCRIBE NOW! </d-text>
 	</d-box>
@@ -147,7 +147,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Spamton</d-speaker>
 		<d-text>Get Big and WIN<span class="break"></span> [W1ld Pr1zes!]</d-text>
