--- a/encounters/spamtonneoweird.html
+++ b/encounters/spamtonneoweird.html
@@ -41,8 +41,8 @@ toc:
         id: encounter
         name: Initial encounter
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
         subheadings:
           -
             id: ft-bigshotpre
@@ -58,8 +58,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-turn
         name: With specific turns
@@ -96,7 +96,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>The stage lights are shattered.</d-text>
 	</d-box>
@@ -164,7 +164,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Spamton NEO</d-speaker>
 		<d-text>CAN A [Little<span class="break"></span> Sponge] DO THIS?</d-text>
