--- a/encounters/sweetcapncakes.html
+++ b/encounters/sweetcapncakes.html
@@ -69,8 +69,8 @@ toc:
             id: encounter-otherenemyname
             name: With Other_enemy_name
       -
-        id: ft-standard
-        name: Standard
+        id: ft-neutral
+        name: Neutral
       -
         id: ft-tired
         name: Tired
@@ -85,8 +85,8 @@ toc:
     name: General dialogue
     subheadings:
       -
-        id: dialogue-standard
-        name: Standard
+        id: dialogue-neutral
+        name: Neutral
       -
         id: dialogue-specialcondition
         name: Special_condition
@@ -124,7 +124,7 @@ toc:
 
 	<hr>
 
-	<h3 id="ft-standard">Standard</h3>
+	<h3 id="ft-neutral">Neutral</h3>
 	<hr class="hr2">
 	<p class="note">80% chance:</p>
 	<h4>If no one is dancing</h4>
@@ -303,7 +303,7 @@ toc:
 <section class="d-section" id="dialogue">
 	<h2>General dialogue</h2>
 
-	<h3 id="dialogue-standard">Standard</h3>
+	<h3 id="dialogue-neutral">Neutral</h3>
 	<h4>Sweet</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Sweet</d-speaker>
