Zapper: Mark "turn it up" dialogue as unused

--- a/encounters/zapper.html
+++ b/encounters/zapper.html
@@ -305,6 +305,7 @@ Unused encounters with blank text:
 
 	<h3 id="volumeup-dialogue">Dialogue</h3>
 	<p class="note">In the below dialogue, the speech bubbles appear for the Zappers in enemy slot 1, 2, and 3, respectively. If there is no enemy in that slot, or the enemy is not a Zapper, the corresponding dialogue does not play.</p>
+	<p>(As only a maximum of 2 Zappers ever appears in a single encounter, the third dialogue goes unused.)</p>
 	<div class="boxgroup">
 		<d-box theme="battletalk">
 			<d-speaker>Zapper</d-speaker>
