Document triple-Mike encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -256,6 +256,12 @@ items:
           -
             url: titan
             name: Titan
+      -
+        name: Castle Town's TV Studio
+        sublist:
+          -
+            url: mike
+            name: Mike
   -
     id: other
     name: Other
