--- a/encounters/index.html
+++ b/encounters/index.html
@@ -169,7 +169,9 @@ items:
           -
             url: shadowguy
             name: Shadowguy
-          # Lanino/Elnina
+          -
+            url: weather
+            name: Lanino and Elnina
       -
         name: Island Board
         sublist:
@@ -276,7 +278,10 @@ items:
           -
             url: tasquemanagerdojo
             name: Tasque Manager Says
-          # Ch2 All Stars, Lanino&Elnina
+          # Ch2 All Stars
+          -
+            url: weatherdojo
+            name: Lanino&Elnina
       -
         name: Unused
         sublist:
