Weather (Dojo): Make "Mercy" yellow in ToC

--- a/encounters/weatherdojo.html
+++ b/encounters/weatherdojo.html
@@ -58,7 +58,7 @@ toc:
         name: Neutral
       -
         id: ft-mercyup
-        name: At 90% Mercy or higher
+        name: At 90% <span class="yellow">Mercy</span> or higher
   -
     id: dialogue
     name: General dialogue
@@ -68,10 +68,10 @@ toc:
         name: Neutral
       -
         id: dialogue-mercyup90
-        name: At 90% Mercy
+        name: At 90% <span class="yellow">Mercy</span>
       -
         id: dialogue-mercyup95
-        name: At 95% Mercy
+        name: At 95% <span class="yellow">Mercy</span>
   -
     name: ACTs
     subheadings:
