Document Ch3 Rouxls Kaard encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -198,7 +198,9 @@ items:
           -
             url: ribbick
             name: Ribbick
-          # Rouxls Kaard{END_LINK} (second encounter, ACTing only)
+          -
+            url: rouxlsch3
+            name: Rouxls Kaard{END_LINK} (second encounter, ACTing only)
       -
         name: Cold Place
         sublist:
