Spells: Note ACT description in Ch2 <v1.08

--- a/misc/spells.html
+++ b/misc/spells.html
@@ -328,13 +328,13 @@ toc:
 
 	<h3 id="act-description">Description</h3>
 	<h4 id="act-description-overworld">Overworld</h4>
-	<h5>Chapter 1</h5>
+	<h5>Chapter 1; and Chapter 2, prior to v1.08</h5>
 	<d-box theme="objmenu">
 		<d-text>Do all sorts of things.</d-text>
 		<d-text>It isn't magic.</d-text>
 	</d-box>
 
-	<h5>Chapter 2</h5>
+	<h5>Chapter 2, v1.08 onwards</h5>
 	<d-box theme="objmenu">
 		<d-text>You can do many things.</d-text>
 		<d-text>Don't confuse it with magic.</d-text>
