Correct "Doom Board" to "Bonus Round"
Doom Board is the OST name, the in-game name for this board is just Bonus Round. (Or Round 3, but since the other boards are named Desert/Island Board it's better to have a [Descriptor] Board name.)

--- a/encounters/shadowguy.html
+++ b/encounters/shadowguy.html
@@ -227,7 +227,7 @@ Unused encounters with blank text:
 		<d-text asterisk>Battling's just a side gig. Playing on stage is the dream!</d-text>
 	</d-box>
 
-	<h4>During the Doom Board fight with Tenna</h4>
+	<h4>During the Bonus Round fight with Tenna</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>SHADOWGUY - AT <img src="{{ '/assets/images/story/talkshadowguy/sharp.png' | relative_url }}" alt="♯" style="height: 0.8em; vertical-align: baseline;" /> DF <img src="{{ '/assets/images/story/talkshadowguy/flat.png' | relative_url }}" alt="♭" style="height: 0.8em; vertical-align: baseline;" /></d-text>
 		<d-text asterisk>The "Sharpshoot" act can shoot many things!</d-text>
