--- a/encounters/zapper.html
+++ b/encounters/zapper.html
@@ -19,7 +19,7 @@ sources:
   -
     name: gml_Object_obj_tenna_board4_enemy_Step_0
     chapters: [3]
-    note: Doom Board standard flavor text
+    note: Bonus Round standard flavor text
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
@@ -170,7 +170,7 @@ Unused encounters with blank text:
 		<d-text asterisk>Zapper checks if Tenna is watching.</d-text>
 	</d-box>
 
-	<h4>During the Doom Board fight with Tenna present</h4>
+	<h4>During the Bonus Round fight with Tenna present</h4>
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Tenna" emotion="0"></d-sprite>
 		<d-text asterisk>All you have to do is speak your mind!</d-text>
@@ -248,7 +248,7 @@ Unused encounters with blank text:
 
 <section class="d-section" id="check">
 	<h2>Check</h2>
-	<p>Appears as "{% include acticon chara="Susie" -%} {% include acticon chara="Ralsei" -%} Check" during the joint battle against Tenna on the Doom Board.</p>
+	<p>Appears as "{% include acticon chara="Susie" -%} {% include acticon chara="Ralsei" -%} Check" during the joint battle against Tenna during the Bonus Round.</p>
 
 	<h3 id="check-description">Description</h3>
 	<d-box theme="battledesc">
@@ -263,7 +263,7 @@ Unused encounters with blank text:
 		<d-text asterisk>ZAPPER - "Hoofer", "Clicker-Clacker", any name, it'll do the work.</d-text>
 	</d-box>
 
-	<h4>During the Doom Board fight with Tenna</h4>
+	<h4>During the Bonus Round fight with Tenna</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>ZAPPER - When it changes channels, who knows where you'll end up?</d-text>
 	</d-box>
@@ -271,7 +271,7 @@ Unused encounters with blank text:
 
 <section class="d-section" id="volumeup">
 	<h2>VolumeUp</h2>
-	<p>Appears as "{% include acticon chara="Susie" -%} {% include acticon chara="Ralsei" -%} VolumeUp" during the joint battle against Tenna on the Doom Board.</p>
+	<p>Appears as "{% include acticon chara="Susie" -%} {% include acticon chara="Ralsei" -%} VolumeUp" during the joint battle against Tenna during the Bonus Round.</p>
 
 	<h3 id="volumeup-description">Description</h3>
 	<d-box theme="battledesc">
@@ -324,7 +324,7 @@ Unused encounters with blank text:
 
 <section class="d-section" id="mute">
 	<h2>Mute</h2>
-	<p>Appears as "{% include acticon chara="Susie" -%} {% include acticon chara="Ralsei" -%} Mute" during the joint battle against Tenna on the Doom Board.</p>
+	<p>Appears as "{% include acticon chara="Susie" -%} {% include acticon chara="Ralsei" -%} Mute" during the joint battle against Tenna during the Bonus Round.</p>
 
 	<h3 id="mute-description">Description</h3>
 	<d-box theme="battledesc">
@@ -345,7 +345,7 @@ Unused encounters with blank text:
 	<d-box theme="battlemenu">
 		<d-text asterisk>All foes became TIRED!</d-text>
 	</d-box>
-	<p class="note">Zapper gains 75% <span class="yellow">Mercy</span>. All enemies (excluding Tenna during the Doom Board encounter) become <span class="blue">Tired</span>.</p>
+	<p class="note">Zapper gains 75% <span class="yellow">Mercy</span>. All enemies (excluding Tenna during the Bonus Round encounter) become <span class="blue">Tired</span>.</p>
 
 	<hr>
 
@@ -376,7 +376,7 @@ Unused encounters with blank text:
 	<h4>Standard</h4>
 	<p class="note">The screen fades back in to show the encounter, and all enemies are automatically spared. The encounter ends.</p>
 	<hr class="hr3">
-	<h4>During the Doom Board fight with Tenna</h4>
+	<h4>During the Bonus Round fight with Tenna</h4>
 	<p class="note">After a pause, the screen fades back in to show the encounter, but with the Zapper gone and the party members missing from inside their gachapon capsules. After a pause, Tenna grins painfully wide.</p>
 	<d-box theme="battletalk">
 		<d-speaker>Tenna</d-speaker>
@@ -447,7 +447,7 @@ Unused encounters with blank text:
 		<d-text class="fnt-combat text-center-expand">(funky music plays)</d-text>
 	</d-box>
 	<hr class="hr3">
-	<h4>During the Doom Board fight with Tenna</h4>
+	<h4>During the Bonus Round fight with Tenna</h4>
 	<d-box theme="plain">
 		<d-text class="fnt-combat text-center-expand">(Tense music plays)</d-text>
 	</d-box>
