--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -593,7 +593,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 		<d-text asterisk>(You're filled with the power of tessellation.)</d-text>
 	</d-box>
 
-	<h4>After the Doom Board</h4>
+	<h4>After the Bonus Round</h4>
 	<!-- actually it's plot >= 280, once mike has abandoned tenna -->
 	<d-box theme="dark">
 		<d-text asterisk>(After the performance, when all the actors have gone home...)</d-text>
@@ -606,7 +606,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 
 	<h3 id="coldplace">Cold Place</h3> <!-- 109/room_dw_snow_zone -->
 
-	<h4>Before the Doom Board</h4>
+	<h4>Before the Bonus Round</h4>
 	<!-- actually it's plot < 280, before mike has abandoned tenna -->
 	<d-box theme="dark">
 		<d-text asterisk>(A draft blows, and you feel the cold night's presence.)</d-text>
@@ -615,7 +615,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 		<d-text asterisk>(Still, this never bothered you. In fact...)</d-text>
 	</d-box>
 
-	<h4>After the Doom Board</h4>
+	<h4>After the Bonus Round</h4>
 	<!-- actually it's plot >= 280, once mike has abandoned tenna -->
 	<d-box theme="dark">
 		<d-text asterisk>(The wind blows fiercely, as if it fears the night itself.)</d-text>
